--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,100 @@ body {
 .buttons {
   margin-left: 1em;
 }
+
+
+
+
+
+  /*---------------------------------------
+      HOME              
+  -----------------------------------------*/
+
+
+
+.slider .container {
+  width: 100%;
+  
+}
+
+
+
+.slider .caption {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(248, 240, 240, 0.2);
+  height: 100%;
+  color: rgb(136, 6, 6);
+  cursor: e-resize;
+}
+
+.slider .item {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: local;
+  background-size: contain;
+  height: 650px;
+}
+
+
+.slider .item-first {
+  background-image: url(../src/images/slider1.jpg);
+  
+}
+
+
+
+/*---------------------------------------
+     Search Bar CSS            
+  -----------------------------------------*/
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  
+ 
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
+}
+
+
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+input[type="text"] {
+  height: 35px;
+  font-size: 25px;
+}
