--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,100 @@ body {
 .buttons {
   margin-left: 1em;
 }
+
+
+
+
+
+  /*---------------------------------------
+      HOME              
+  -----------------------------------------*/
+ /*
+  #home {
+    background: url('../images/s-bg.jpg') no-repeat top center;
+    background-size: cover;
+    padding-top: 150px;
+    padding-bottom: 150px;
+  }
+*/
+
+#home h1 {
+  color: #ffffff;
+  padding-bottom: 10px;
+  margin-top: 0;
+}
+
+#home h3 {
+  color: #ffffff;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: inherit;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.slider .container {
+  width: 100%;
+  
+}
+
+.slider .owl-dots {
+    position: absolute;
+    top: 500px;
+    width: 100%;
+    justify-content: center;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+  width: 8px;
+  height: 8px;
+  margin: 5px 7px;
+  border: 2px solid #d9d9d9;
+  background: transparent;
+  display: block;
+  -webkit-backface-visibility: visible;
+  transition: opacity 200ms ease;
+  border-radius: 30px;
+}
+
+.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
+  background-color: #ffffff;
+  border-color: transparent;
+}
+
+.slider .caption {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  background-color: rgba(248, 240, 240, 0.2);
+  height: 100%;
+  color: #fff;
+  cursor: e-resize;
+}
+
+.slider .item {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: local;
+  background-size: contain;
+  height: 650px;
+}
+
+
+.slider .item-first {
+  background-image: url(../src/images/slider1.jpg);
+  
+}
+.slider .item-second {
+  background-image: url(../src/images/slider2.jpg);
+}
+
+.slider .item-third {
+  background-image: url(../src/images/slider1.jpg);
+}
+
+
+
+
