--- a/src/App.css
+++ b/src/App.css
@@ -78,21 +78,6 @@ body {
   }
 */
 
-#home h1 {
-  color: #ffffff;
-  padding-bottom: 10px;
-  margin-top: 0;
-}
-
-#home h3 {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: inherit;
-  letter-spacing: 3px;
-  text-transform: uppercase;
-  margin: 0;
-}
 
 .slider .container {
   width: 100%;
@@ -125,14 +110,58 @@ body {
   background-image: url(../src/images/slider1.jpg);
   
 }
-.slider .item-second {
-  background-image: url(../src/images/slider2.jpg);
+
+
+
+/*---------------------------------------
+     Search Bar CSS            
+  -----------------------------------------*/
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+  
+ 
 }
 
-.slider .item-third {
-  background-image: url(../src/images/slider1.jpg);
+.searchTerm {
+  width: 100%;
+  border: 3px solid #00B4CC;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9DBFAF;
+}
+
+.searchTerm:focus{
+  color: #00B4CC;
+}
+
+.searchButton {
+  width: 40px;
+  height: 36px;
+  border: 1px solid #00B4CC;
+  background: #00B4CC;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 
+.wrap{
+  width: 30%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 
+input[type="text"] {
+  height: 35px;
+  font-size: 25px;
+}
