logo and app css

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+:root{
+  --mainBlue:#2a2a72;
+  --lightBlue:#009ffd;
+  --mainWhite:#f3f3f3;
+  --mainDark:#232528;
+  --mainYellow:#ff8400;
+
+}
+
 h1 {
   font-size: 2em;
 }
@@ -38,6 +47,8 @@ h1 {
 .navbar-item {
   display: flex !important;
 }
+
+
 
 .navbar-end {
   justify-content: flex-end !important;
@@ -99,7 +110,7 @@ body {
   border: 2px solid #d9d9d9;
   background: transparent;
   display: block;
-  -webkit-backface-visibility: visible;
+  
   transition: opacity 200ms ease;
   border-radius: 30px;
 }
@@ -132,7 +143,7 @@ body {
 
 
 .slider .item-first {
-  background-image: url(../src/images/slider1.jpg);
+  background-image: url(../src/images/slider2.jpg);
   
 }
 
@@ -185,53 +196,6 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
-
-input[type="text"] {
-  height: 35px;
-  font-size: 25px;
-}
-.slider .item-second {
-  background-image: url(../src/images/slider2.jpg);
-
-}
-
-.searchTerm {
-  width: 100%;
-  border: 3px solid #00B4CC;
-  border-right: none;
-  padding: 5px;
-  height: 20px;
-  border-radius: 5px 0 0 5px;
-  outline: none;
-  color: #9DBFAF;
-}
-
-.searchTerm:focus{
-  color: #00B4CC;
-}
-
-.searchButton {
-  width: 40px;
-  height: 36px;
-  border: 1px solid #00B4CC;
-  background: #00B4CC;
-  text-align: center;
-  color: #fff;
-  border-radius: 0 5px 5px 0;
-  cursor: pointer;
-  font-size: 20px;
-}
-
-
-.wrap{
-  width: 30%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
 
 
 input[type="text"] {
