--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: local;
-  background-size: contain;
+  background-size: 100%;
   height: 650px;
 }
 
