--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,101 @@
-h1 {
-  font-size: 2em;
+:root{
+  --mainBlue:#2a2a72;
+  --lightBlue:#009ffd;
+  --mainWhite:#f3f3f3;
+  --mainDark:#232528;
+  --mainYellow:#ff8400;
+
 }
 
-.product-title {
-  font-weight: bold;
-  font-size: 1.2em;
-}
-
-.product-id {
-  font-size: .8em;
-  margin: 1em 0;
-}
-
-.product-edit-icon {
-  opacity: .7;
-  position: absolute;
-  right: 2.3rem;
-  top: .4rem;
-}
-
-.product-edit-icon:hover {
-  opacity: 1;
-}
-
-.navbar, .navbar-end, .navbar-menu, .navbar-start {
-  align-items: stretch !important;
-  display: flex !important;
-}
-
-.navbar-menu {
-  flex-grow: 1 !important;
-  flex-shrink: 0 !important;
-  box-shadow: none !important;
-  padding: 0 !important;
-}
-
-.navbar-item {
-  display: flex !important;
-}
-
-.navbar-end {
-  justify-content: flex-end !important;
-  margin-left: auto !important;
-}
-
-.features {
-  padding-bottom: 3em;
-}
-
-body {
+body{
   visibility: visible !important;
+  font-family: 'Oswald', sans-serif !important;
+  background: var(--mainWhite) !important;
+  color: var(--mainDark) !important;
+  
+
+}
+
+.text-title{
+  font-family: 'Permanent Marker', cursive !important;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+
+}
+
+.text-blue{
+color: var(--mainBlue);
+}
+
+.text-bright{
+  color: var(--lightBlue);
+}
+
+.btn-black{
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: var(--mainDark);
+  border-radius: 0rem !important;
+  border: 0.1rem solid var(--mainDark) !important;
+}
+
+.btn-black:hover{
+  background: var(--mainDark) !important;
+  color: var(--mainWhite) !important;
+}
+
+.cart-icon{
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--mainYellow);
+}
+
+.books-count{
+  background-color: springgreen;
 }
 
 
-.auth form {
-  margin-top: 1em;
-  max-width: 50%;
+.flip-box {
+  background-color: transparent;
+  width: 100%;
+  height: 200px;
+  border: 2px solid #f1f1f1;
+  perspective: 1000px;
 }
 
-.buttons {
-  margin-left: 1em;
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+.flip-box:hover .flip-box-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-box-front, .flip-box-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-box-front {
+  background-color: #bbb;
+  color: black;
+}
+
+.flip-box-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+
+.searchButton{
+  color:#2a2a72;
 }
