--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,28 @@ color: var(--mainBlue);
 .searchButton{
   color:#2a2a72;
 }
+
+
+.th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
+
+
+
+.signupimg{
+  border-radius: 1.5rem;
+  width: fit-content;
+}
+
+.header-text{
+ text-align: center; 
+ color: brown;
+ line-height: 8rem;
+ font-size: 50px;
+ font-weight: bolder;
+ font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
