--- a/src/App.css
+++ b/src/App.css
@@ -113,14 +113,47 @@ color: var(--mainBlue);
 
 .signupimg{
   border-radius: 1.5rem;
-  width: fit-content;
+  width: 100%;
+  column-fill: auto;
 }
 
 .header-text{
  text-align: center; 
  color: brown;
- line-height: 8rem;
+ line-height: 6rem;
  font-size: 50px;
  font-weight: bolder;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.row {
+  display: flex;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+.row > div {
+  flex: 1;
+  
+  
+}
+.container-mg{
+  background-color: #d9dfe0;
+}
+
+.button-is-success{
+  background-color: #6ff373;
+  text-transform: capitalize;
+  font-size: 2rem !important;
+  color: var(--mainDark);
+ 
+  border-radius: 0.8rem !important;
+  border: 0.1rem solid #6ff373 !important;
+}
+
+
+.button-is-success:hover{
+  background-color: #99012f;
+  color: azure;
+  border: 0rem !important;
 }
