--- a/src/css/Styles.css
+++ b/src/css/Styles.css
@@ -51,10 +51,14 @@
     position: absolute;
     top: 30px;
     right: 10px;
+    
+
 }
 
 .top-navbar .navbar-expand-lg .navbar-nav{
-	background: #2a2a72;
+    background: #2a2a72;
+    
+    
 	
 }
 
@@ -139,41 +143,25 @@
 
 
 
-/*---------------------------*/
+/*-----------Digit Roll----------------*/
 
 
-.DigitRoll__Cell {
-    background-color: #2a2a72;
-    
-  border: none;
-  }
-  .Digit{
-      padding-left: 1rem !important;
-      line-height: 2rem;
-  }
-  .Digit2{
-    padding-left: 3.5rem !important;
-    line-height: 2rem;
-}
-  .DigitRoll {
-    text-align: center !important;
-    font-size: 38px;
-    color: #fdfdff;
-   
-    font-weight: 300;
-    border: none;
-    padding-left: 2.5rem;
-    
-  }
-  
-  .DigitRoll__Divider {
+
+
+.home-con{
     width: 100%;
-    text-align: center;
-  }
-  
+    height: 100%;            
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.8;  /* for demo purpose  */
+}
+.overlay-top-con{
+    z-index: 9;
+    margin: 20px; /* for demo purpose  */
+}
 
-
-
-
-
-
+#tst-try{
+    background: url(../images/sliderbg1.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
