--- a/src/App.css
+++ b/src/App.css
@@ -281,3 +281,8 @@ height: 40px;
   background-color: #e90606 !important;
   
 }
+
+.nav-link-title{
+  font-size: 18px;
+  color: rgb(255, 255, 255);
+}
